--- a/src/main/res/layout/light_settings.xml
+++ b/src/main/res/layout/light_settings.xml
@@ -73,8 +73,8 @@
                 <Spinner
                     android:id="@+id/spinner2"
                     android:layout_width="0dp"
-                    android:layout_height="35dp"
-                    android:minHeight="35dip"
+                    android:layout_height="40dp"
+                    android:minHeight="40dp"
                     android:prompt="@string/readings_prompt"
                     android:layout_marginRight="5dp"
                     android:layout_weight="5"
